# Agentic-AI-Models

./: README.md
ML_academy/: app.py  app_streamlit.py  main.py
ML_academy/agents/: coding.py  progress.py  quiz.py  rag_agent.py  teacher.py
ML_academy/graph/: workflow.py
ML_academy/memory/: memory.py  student.json
ML_academy/prompts/: teacher_prompt.py
ML_academy/rag/: chunk.py  embed.py  ingest.py  pdf_ingest.py  retriever.py
RAG_Based_Model/basic-rag-chatbot/: main.py  pyproject.toml
blood_report_analysis/: blood_work_analysis.ipynb
