[project]
name = "t9-basicrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=1.4.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
